force-app/main/default/objects/JobAttemptWorkerTimeEntry__c/JobAttemptWorkerTimeEntry__c.object-meta.xml
<CustomObject>
    <label>Job Attempt Worker Time Entry</label>
    <nameField>
        <displayFormat>JAWTE-{000000000}</displayFormat>
        <label>Job Attempt Worker Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Attempt Worker Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>