force-app/main/default/objects/JobAttemptWorkerTimeEntry__c/fields/IsBillable__c.field-meta.xml
<CustomField>
    <fullName>IsBillable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billable</label>
    <type>Checkbox</type>
</CustomField>