force-app/main/default/objects/JobAttemptWorkerTimeEntry__c/fields/JobAttemptWorker__c.field-meta.xml
<CustomField>
    <fullName>JobAttemptWorker__c</fullName>
    <label>Job Attempt Worker</label>
    <referenceTo>JobAttemptWorker__c</referenceTo>
    <relationshipLabel>Job Attempt Worker Time Entries</relationshipLabel>
    <relationshipName>Job_Attempt_Worker_Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>