force-app/main/default/objects/JobAttemptWorkerTimeEntry__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <description>This custom field will be populated with standard Last Modified Date value. Created this field for Indexing purposes</description>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>