force-app/main/default/objects/JobAttemptWorkerTimeEntry__c/fields/TeamLeadUserId__c.field-meta.xml
<CustomField>
    <fullName>TeamLeadUserId__c</fullName>
    <formula>JobAttemptWorker__r.JobAttempt__r.TeamLeadUserId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Lead User Id</label>
    <type>Text</type>
</CustomField>