force-app/main/default/objects/JobAttemptWorkerTimeEntry__c/fields/TimeEntryType__c.field-meta.xml
<CustomField>
    <fullName>TimeEntryType__c</fullName>
    <label>Time Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check In</fullName>
            </value>
            <value>
                <fullName>Check out</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Break</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>